--- a/scss/components/_home-module-2.scss
+++ b/scss/components/_home-module-2.scss
@@ -321,6 +321,11 @@
   @include media-breakpoint-down(md) {
     padding: 2em 0 0;
 
+    .stars {
+      background-position: center center;
+      margin-bottom: 1em;
+    }
+
     h2 {
       font-size: 20px;
       margin-bottom: 2em;
