--- a/scss/_icons.scss
+++ b/scss/_icons.scss
@@ -1,24 +1,24 @@
 @mixin svg-map($color) {
   &::before {
-  	background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns="http://www.w3.org/2000/svg"%20viewBox="0%200%2014.4%2020.7"%3E%3Cg%20fill="%23#{$color}"%20id="Layer_2"%20data-name="Layer%202"%3E%3Cg%20id="Layer_6"%20data-name="Layer%206"%3E%3Cpath%20id="_7"%20data-name="7"%20%20d="M7.2,0A7.21,7.21,0,0,0,0,7.2c0,1.89,1.17,4.72,3.49,8.42,1.71,2.72,3.45,4.94,3.46,5a.32.32,0,0,0,.25.12h0a.3.3,0,0,0,.25-.12s1.75-2.26,3.46-5c2.32-3.71,3.49-6.53,3.49-8.38A7.21,7.21,0,0,0,7.2,0Zm0,10.67A3.47,3.47,0,1,1,10.67,7.2,3.47,3.47,0,0,1,7.2,10.67Z"/%3E%3C/g%3E%3C/g%3E%3C/svg%3E');
-  	content: '';
-  	display: block;
-  	width: 16px;
-  	height: 16px;
-  	background-repeat: no-repeat;
-  	background-position: center center;
+    background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns="http://www.w3.org/2000/svg"%20viewBox="0%200%2014.4%2020.7"%3E%3Cg%20fill="%23#{$color}"%20id="Layer_2"%20data-name="Layer%202"%3E%3Cg%20id="Layer_6"%20data-name="Layer%206"%3E%3Cpath%20id="_7"%20data-name="7"%20%20d="M7.2,0A7.21,7.21,0,0,0,0,7.2c0,1.89,1.17,4.72,3.49,8.42,1.71,2.72,3.45,4.94,3.46,5a.32.32,0,0,0,.25.12h0a.3.3,0,0,0,.25-.12s1.75-2.26,3.46-5c2.32-3.71,3.49-6.53,3.49-8.38A7.21,7.21,0,0,0,7.2,0Zm0,10.67A3.47,3.47,0,1,1,10.67,7.2,3.47,3.47,0,0,1,7.2,10.67Z"/%3E%3C/g%3E%3C/g%3E%3C/svg%3E');
+    content: "";
+    display: block;
+    width: 16px;
+    height: 16px;
+    background-repeat: no-repeat;
+    background-position: center center;
   }
 }
 
 @mixin svg-contact($color) {
   &::before {
-  	background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns="http://www.w3.org/2000/svg"%20viewBox="0%200%2013.39%2019.79"%3E%3Cg%20fill="%23#{$color}"%20id="Layer_2"%20data-name="Layer%202"%3E%3Cg%20id="Layer_6"%20data-name="Layer%206"%3E%3Cpath%20id="_8"%20data-name="8"%20%20d="M13.26,17.51l-1.47-2.92a1.37,1.37,0,0,0-1.22-.73,1.58,1.58,0,0,0-.38.05l-1.75.43c-.26-.2-1.06-1-2.5-3.86s-1.59-4-1.59-4.26l1.48-1A1.2,1.2,0,0,0,6.3,3.68L4.83.75A1.41,1.41,0,0,0,3.56,0,1.45,1.45,0,0,0,2.8.21L1.92.74a3.63,3.63,0,0,0-1.64,2A7,7,0,0,0,.05,5.61a20,20,0,0,0,2.12,6.5,22.82,22.82,0,0,0,3.48,5.17c1.56,1.66,3.1,2.51,4.57,2.51a3.76,3.76,0,0,0,1.19-.2l1-.28a1.41,1.41,0,0,0,.86-.72A1.21,1.21,0,0,0,13.26,17.51Z"/%3E%3C/g%3E%3C/g%3E%3C/svg%3E');
-    content: '';
-  	display: block;
-  	width: 16px;
-  	height: 16px;
-  	background-repeat: no-repeat;
-  	background-position: center center;
+    background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns="http://www.w3.org/2000/svg"%20viewBox="0%200%2013.39%2019.79"%3E%3Cg%20fill="%23#{$color}"%20id="Layer_2"%20data-name="Layer%202"%3E%3Cg%20id="Layer_6"%20data-name="Layer%206"%3E%3Cpath%20id="_8"%20data-name="8"%20%20d="M13.26,17.51l-1.47-2.92a1.37,1.37,0,0,0-1.22-.73,1.58,1.58,0,0,0-.38.05l-1.75.43c-.26-.2-1.06-1-2.5-3.86s-1.59-4-1.59-4.26l1.48-1A1.2,1.2,0,0,0,6.3,3.68L4.83.75A1.41,1.41,0,0,0,3.56,0,1.45,1.45,0,0,0,2.8.21L1.92.74a3.63,3.63,0,0,0-1.64,2A7,7,0,0,0,.05,5.61a20,20,0,0,0,2.12,6.5,22.82,22.82,0,0,0,3.48,5.17c1.56,1.66,3.1,2.51,4.57,2.51a3.76,3.76,0,0,0,1.19-.2l1-.28a1.41,1.41,0,0,0,.86-.72A1.21,1.21,0,0,0,13.26,17.51Z"/%3E%3C/g%3E%3C/g%3E%3C/svg%3E');
+    content: "";
+    display: block;
+    width: 16px;
+    height: 16px;
+    background-repeat: no-repeat;
+    background-position: center center;
   }
 }
 
@@ -43,8 +43,9 @@
 }
 
 @mixin svg-chevron($color) {
-  margin-left: .5em;
-  background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 7.88 3.94"><g id="ebaaa947-f42e-4a3a-9b87-879574ce7a12" data-name="Layer 2"><g id="ee5fd1d0-221f-4990-85c7-9006dcc2506f" data-name="Layer 8"><polygon points="3.94 3.23 0.71 0 0 0 3.94 3.94 7.88 0 7.17 0 3.94 3.23" fill="%23ecb71e"/></g></g></svg>') center center no-repeat;
+  margin-left: 0.5em;
+  background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 7.88 3.94"><g id="ebaaa947-f42e-4a3a-9b87-879574ce7a12" data-name="Layer 2"><g id="ee5fd1d0-221f-4990-85c7-9006dcc2506f" data-name="Layer 8"><polygon points="3.94 3.23 0.71 0 0 0 3.94 3.94 7.88 0 7.17 0 3.94 3.23" fill="%23ecb71e"/></g></g></svg>')
+    center center no-repeat;
 }
 
 @mixin svg-filled-arrow($color) {
@@ -52,27 +53,27 @@
 }
 
 @mixin svg-stars($color: $sherpa-brand-primary) {
-  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 132.25 22.74"><title>stars</title><g id="c08f7bb8-0f71-40ef-880c-d6bdfa8d1bce" data-name="Layer 2"><g id="1de193c5-e619-41c7-908f-f63de6693311" data-name="Layer 7"><path d="M23.51,8.82l-2.6,2c-1.39,1-2.77,2.09-4.17,3.12a.39.39,0,0,0-.16.53q1.37,3.89,2.73,7.79l.17.51-2.15-1.41c-1.73-1.13-3.45-2.26-5.17-3.4a.48.48,0,0,0-.63,0q-3.39,2.24-6.79,4.46l-.55.36.64-2c.7-2.11,1.39-4.22,2.09-6.32a.39.39,0,0,0-.16-.53L.37,9.11A1.4,1.4,0,0,1,0,8.73H8.21a.5.5,0,0,0,.57-.39C9.72,5.72,10.68,3.1,11.64.48L11.82,0c.06.13.1.21.13.3.88,2.7,1.75,5.4,2.61,8.11.09.28.24.33.49.33h8.44l0,.08" fill="%23ebb619"/><path d="M50.62,8.82l-2.6,2c-1.39,1-2.77,2.09-4.17,3.12a.39.39,0,0,0-.16.53q1.37,3.89,2.73,7.79l.17.51-2.15-1.41c-1.73-1.13-3.45-2.26-5.17-3.4a.48.48,0,0,0-.63,0q-3.39,2.24-6.79,4.46l-.55.36.64-2c.7-2.11,1.39-4.22,2.09-6.32a.39.39,0,0,0-.16-.53L27.48,9.11a1.38,1.38,0,0,1-.37-.38h8.21a.5.5,0,0,0,.57-.39c.94-2.63,1.9-5.25,2.86-7.87L38.93,0c.05.13.1.21.13.3.87,2.7,1.75,5.4,2.61,8.11.09.28.24.33.49.33H50.6l0,.08" fill="%23ebb619"/><path d="M77.88,8.82l-2.6,2c-1.39,1-2.77,2.09-4.17,3.12a.39.39,0,0,0-.15.53q1.37,3.89,2.72,7.79l.17.51L71.7,21.33c-1.73-1.13-3.45-2.26-5.17-3.4a.48.48,0,0,0-.63,0q-3.39,2.24-6.79,4.46l-.55.36c.23-.72.43-1.35.64-2,.69-2.11,1.39-4.22,2.09-6.32a.39.39,0,0,0-.17-.53L54.74,9.11a1.35,1.35,0,0,1-.37-.38h8.21a.5.5,0,0,0,.57-.39C64.09,5.72,65.06,3.1,66,.48L66.19,0c.05.13.1.21.13.3.87,2.7,1.75,5.4,2.61,8.11.09.28.24.33.49.33h8.44l0,.08" fill="%23ebb619"/><path d="M105.07,8.82l-2.6,2c-1.39,1-2.77,2.09-4.17,3.12a.39.39,0,0,0-.16.53q1.37,3.89,2.73,7.79l.17.51-2.15-1.41c-1.73-1.13-3.45-2.26-5.17-3.4a.48.48,0,0,0-.63,0q-3.39,2.24-6.79,4.46l-.55.36.64-2c.7-2.11,1.39-4.22,2.09-6.32a.39.39,0,0,0-.16-.53L81.93,9.11a1.4,1.4,0,0,1-.37-.38h8.21a.5.5,0,0,0,.57-.39c.94-2.63,1.9-5.25,2.86-7.87L93.38,0c.06.13.1.21.13.3.88,2.7,1.75,5.4,2.61,8.11.09.28.24.33.49.33H105l0,.08" fill="%23ebb619"/><path d="M132.25,8.82l-2.6,2c-1.39,1-2.77,2.09-4.17,3.12a.39.39,0,0,0-.16.53q1.37,3.89,2.73,7.79l.17.51-2.15-1.41c-1.73-1.13-3.45-2.26-5.17-3.4a.48.48,0,0,0-.63,0q-3.39,2.24-6.79,4.46l-.55.36.64-2c.7-2.11,1.39-4.22,2.09-6.32a.39.39,0,0,0-.16-.53l-6.38-4.79a1.38,1.38,0,0,1-.37-.38H117a.5.5,0,0,0,.57-.39c.94-2.63,1.9-5.25,2.86-7.87l.18-.48c.05.13.1.21.13.3.87,2.7,1.75,5.4,2.61,8.11.09.28.24.33.49.33h8.44l0,.08" fill="%23ebb619"/></g></g></svg>')
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 132.25 22.74"><title>stars</title><g id="c08f7bb8-0f71-40ef-880c-d6bdfa8d1bce" data-name="Layer 2"><g id="1de193c5-e619-41c7-908f-f63de6693311" data-name="Layer 7"><path d="M23.51,8.82l-2.6,2c-1.39,1-2.77,2.09-4.17,3.12a.39.39,0,0,0-.16.53q1.37,3.89,2.73,7.79l.17.51-2.15-1.41c-1.73-1.13-3.45-2.26-5.17-3.4a.48.48,0,0,0-.63,0q-3.39,2.24-6.79,4.46l-.55.36.64-2c.7-2.11,1.39-4.22,2.09-6.32a.39.39,0,0,0-.16-.53L.37,9.11A1.4,1.4,0,0,1,0,8.73H8.21a.5.5,0,0,0,.57-.39C9.72,5.72,10.68,3.1,11.64.48L11.82,0c.06.13.1.21.13.3.88,2.7,1.75,5.4,2.61,8.11.09.28.24.33.49.33h8.44l0,.08" fill="%23ebb619"/><path d="M50.62,8.82l-2.6,2c-1.39,1-2.77,2.09-4.17,3.12a.39.39,0,0,0-.16.53q1.37,3.89,2.73,7.79l.17.51-2.15-1.41c-1.73-1.13-3.45-2.26-5.17-3.4a.48.48,0,0,0-.63,0q-3.39,2.24-6.79,4.46l-.55.36.64-2c.7-2.11,1.39-4.22,2.09-6.32a.39.39,0,0,0-.16-.53L27.48,9.11a1.38,1.38,0,0,1-.37-.38h8.21a.5.5,0,0,0,.57-.39c.94-2.63,1.9-5.25,2.86-7.87L38.93,0c.05.13.1.21.13.3.87,2.7,1.75,5.4,2.61,8.11.09.28.24.33.49.33H50.6l0,.08" fill="%23ebb619"/><path d="M77.88,8.82l-2.6,2c-1.39,1-2.77,2.09-4.17,3.12a.39.39,0,0,0-.15.53q1.37,3.89,2.72,7.79l.17.51L71.7,21.33c-1.73-1.13-3.45-2.26-5.17-3.4a.48.48,0,0,0-.63,0q-3.39,2.24-6.79,4.46l-.55.36c.23-.72.43-1.35.64-2,.69-2.11,1.39-4.22,2.09-6.32a.39.39,0,0,0-.17-.53L54.74,9.11a1.35,1.35,0,0,1-.37-.38h8.21a.5.5,0,0,0,.57-.39C64.09,5.72,65.06,3.1,66,.48L66.19,0c.05.13.1.21.13.3.87,2.7,1.75,5.4,2.61,8.11.09.28.24.33.49.33h8.44l0,.08" fill="%23ebb619"/><path d="M105.07,8.82l-2.6,2c-1.39,1-2.77,2.09-4.17,3.12a.39.39,0,0,0-.16.53q1.37,3.89,2.73,7.79l.17.51-2.15-1.41c-1.73-1.13-3.45-2.26-5.17-3.4a.48.48,0,0,0-.63,0q-3.39,2.24-6.79,4.46l-.55.36.64-2c.7-2.11,1.39-4.22,2.09-6.32a.39.39,0,0,0-.16-.53L81.93,9.11a1.4,1.4,0,0,1-.37-.38h8.21a.5.5,0,0,0,.57-.39c.94-2.63,1.9-5.25,2.86-7.87L93.38,0c.06.13.1.21.13.3.88,2.7,1.75,5.4,2.61,8.11.09.28.24.33.49.33H105l0,.08" fill="%23ebb619"/><path d="M132.25,8.82l-2.6,2c-1.39,1-2.77,2.09-4.17,3.12a.39.39,0,0,0-.16.53q1.37,3.89,2.73,7.79l.17.51-2.15-1.41c-1.73-1.13-3.45-2.26-5.17-3.4a.48.48,0,0,0-.63,0q-3.39,2.24-6.79,4.46l-.55.36.64-2c.7-2.11,1.39-4.22,2.09-6.32a.39.39,0,0,0-.16-.53l-6.38-4.79a1.38,1.38,0,0,1-.37-.38H117a.5.5,0,0,0,.57-.39c.94-2.63,1.9-5.25,2.86-7.87l.18-.48c.05.13.1.21.13.3.87,2.7,1.75,5.4,2.61,8.11.09.28.24.33.49.33h8.44l0,.08" fill="%23ebb619"/></g></g></svg>');
 }
 
 @mixin svg-check($color: $sherpa-brand-primary) {
   &::before {
-      background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 12"><title>check</title><g id="fc87daac-3907-416a-838c-dfa2eeee8b3f" data-name="Layer 2"><g id="aa0de6fd-9b04-4029-9f4e-07e2dae9e671" data-name="Layer 8"><path d="M.64,6A5.36,5.36,0,1,1,6,11.36,5.36,5.36,0,0,1,.64,6M0,6A6,6,0,1,0,6,0,6,6,0,0,0,0,6" fill="%23ecb71e"/><polygon points="8.62 3.93 4.85 7 3.49 5.36 2.9 5.84 4.74 8.07 9.1 4.52 8.62 3.93" fill="%23ecb71e"/></g></g></svg>');
-      content: '';
-      width: 16px;
-      height: 16px;
-      float: left;
-      background-repeat: no-repeat;
-      background-size: 16px 16px;
-      margin-right: 10px;
-      margin-top: 4px; 
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 12"><title>check</title><g id="fc87daac-3907-416a-838c-dfa2eeee8b3f" data-name="Layer 2"><g id="aa0de6fd-9b04-4029-9f4e-07e2dae9e671" data-name="Layer 8"><path d="M.64,6A5.36,5.36,0,1,1,6,11.36,5.36,5.36,0,0,1,.64,6M0,6A6,6,0,1,0,6,0,6,6,0,0,0,0,6" fill="%23ecb71e"/><polygon points="8.62 3.93 4.85 7 3.49 5.36 2.9 5.84 4.74 8.07 9.1 4.52 8.62 3.93" fill="%23ecb71e"/></g></g></svg>');
+    content: "";
+    width: 16px;
+    height: 16px;
+    float: left;
+    background-repeat: no-repeat;
+    background-size: 16px 16px;
+    margin-right: 10px;
+    margin-top: 4px;
   }
 }
 
 @mixin svg-g-ring() {
   &::before {
     background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21.96 21.96"><title>g-ring</title><g id="a0d06427-773d-4615-b914-5b75869e4128" data-name="Layer 2"><g id="aaf62703-36cb-48a9-85f1-285a7e5f3201" data-name="Layer 10"><path d="M1.42,11A9.38,9.38,0,0,1,2.47,6.65l.11-.22L1.42,5.59l-.16.3a10.88,10.88,0,0,0-.07,10l.14.29,1.19-.79-.11-.23A9.4,9.4,0,0,1,1.42,11Z" fill="%23f2ab26"/><path d="M18.44,3l-.22-.21-.93,1.07.2.19a9.51,9.51,0,0,1-.26,14.19l-.21.19.9,1.1.23-.2A10.93,10.93,0,0,0,18.44,3Z" fill="%234d75b9"/><path d="M17.46,18l-.23.19a9.52,9.52,0,0,1-14.82-3l-.15-.3-1.19.8.12.23a10.95,10.95,0,0,0,17,3.36l.21-.18Z" fill="%232a9847"/><path d="M18.44,3A10.94,10.94,0,0,0,1.26,5.89l-.12.23L2.31,7l.16-.31A9.52,9.52,0,0,1,17.49,4l.22.21.94-1.07Z" fill="%23e53227"/></g></g></svg>');
-    content: '';
+    content: "";
     width: 26px;
     height: 26px;
     display: block;
@@ -96,7 +97,6 @@
 
 /* Icon Up */
 @mixin icon-up {
-
   svg {
     transform: translateZ(0);
   }
@@ -104,9 +104,8 @@
   &:hover,
   &:focus,
   &:active {
-
     svg {
-      animation: hover-icon-up .75s ease-out;
+      animation: hover-icon-up 0.75s ease-out;
     }
   }
 }
@@ -121,4 +120,22 @@
 
 @mixin icon-line-3() {
   background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 204.35 135.44"><title>line-3</title><g id="b29e4fe5-b5a8-44a7-a148-07cf8ec7489e" data-name="Layer 2"><g id="a71bc8d1-1124-4195-920a-e2f9b0291b24" data-name="Layer 8"><rect x="-15.73" y="118.54" width="32.63" height="1.17" transform="translate(119.71 118.54) rotate(90)" fill="%23e6e6e6"/><polygon points="0.56 103.84 204.35 1.03 203.79 0 0 102.82 0.56 103.84" fill="%23e6e6e6"/></g></g></svg>');
+}
+
+@mixin checkbox() {
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 33.21 33.22"><title>checkmark</title><g id="a13c81ac-c0a9-4833-bac8-04d566515d0a" data-name="Layer 2"><g id="b05804ad-afe0-4a0d-b4e0-99c3589d993b" data-name="Layer 7"><path d="M1.76,16.61A14.85,14.85,0,1,1,16.61,31.45,14.86,14.86,0,0,1,1.76,16.61M0,16.61A16.61,16.61,0,1,0,16.61,0,16.63,16.63,0,0,0,0,16.61" fill="#ebb61e"/><polygon points="23.85 10.87 13.41 19.36 9.65 14.82 8.02 16.18 13.11 22.35 25.19 12.51 23.85 10.87" fill="#ebb61e"/></g></g></svg>');
+}
+
+@mixin check() {
+  &::before {
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 31.48 28.08"><title>check</title><g id="e83e243a-8412-4bb0-8f4c-8def0054e0fa" data-name="Layer 2"><g id="be6735d2-cd52-4cfc-8ea0-bf1118fe7228" data-name="Layer 7"><path d="M31.43.89l0-.24L31.11.44a.16.16,0,0,1-.19-.11L30.56.17c-.38,0-.8.21-1.12-.17h-.25c-.43.38-.92.18-1.4.13l-.48.08c-.15.18-.34.15-.54.13h0c-.14.16-.27.34-.52.15H26a.07.07,0,0,1-.08,0l-.24.17v.1L25.6.73l-.28,0L25,1c0,.1-.07.13-.17.08l-.33.08a2.94,2.94,0,0,1-1.06.53l-.18.08a2.17,2.17,0,0,1-.88.48s0,0-.08,0a8.78,8.78,0,0,1-1.65,1l-.22.16a.46.46,0,0,0-.07.07,17.19,17.19,0,0,0-3.53,3.15l-.41.4s0,.07-.05.07a.69.69,0,0,1-.07.15l-.14.18-.15.1h0l-.13.17-.29.35c-.11.19-.23.37-.35.55-.36.48-.7,1-1,1.46l-.45.59s0,.05,0,.06l-.14.3-.34.54a1.21,1.21,0,0,1-.3.25.11.11,0,0,1,0,.11L12.3,13l0,.23c-.65,1.12-1.22,2.18-1.7,3.09l0,0c-.28.15-.28.51-.51.69l-.17.4c0,.08,0,.11-.1.14a.19.19,0,0,1,0,.12,1.48,1.48,0,0,1-.35.74l-.43-.57A9.9,9.9,0,0,0,8,16.19l-.23.14L7.51,16a2.49,2.49,0,0,0,.17-.24,9.82,9.82,0,0,0-1.83-2.37c-.12-.12-.3-.18-.33-.38l-.26-.15c-.14,0-.25,0-.24-.19l-.24-.15a.43.43,0,0,1-.62-.29.91.91,0,0,0-.45-.14,1.45,1.45,0,0,0-.49-.19C.85,11.77,0,14.63,0,14.63l1.11,2.29.1.47.07.2.08.2.07.18a.89.89,0,0,1,.24.6l.15.33a4.76,4.76,0,0,1,.72,1.42.09.09,0,0,1,0,.09.15.15,0,0,1,.1.17.08.08,0,0,1,0,.09l.11.18a.07.07,0,0,1,0,.07l.1.19.28.5a.29.29,0,0,1,.2.31l.2.37h0l.05,0,.09.18h.07a1.42,1.42,0,0,1,.14.36H4a.2.2,0,0,1,.14.26l0,.25c.26.15.34.43.49.67.2.08.35.19.36.42a.08.08,0,0,1,.06.08.32.32,0,0,1,.21.32.07.07,0,0,1,.06.07,1.55,1.55,0,0,1,.49.72l.32.46c.25.3.5.61.77.9a2.66,2.66,0,0,0,4.13.18l.25-.2h0l.13-.14a21.08,21.08,0,0,1,1.29-2.2s0-.05,0-.06a4.62,4.62,0,0,1,.77-1.39s0-.06,0-.07L15.75,19a15,15,0,0,0,.94-2l2.49-4.16a.43.43,0,0,0,0-.11,4.85,4.85,0,0,1,.74-1,0,0,0,0,1,0-.06,11.28,11.28,0,0,1,1.87-2.53l.23-.28a1,1,0,0,1,.46-.51,4.75,4.75,0,0,1,1-1.06,2.44,2.44,0,0,1,1.07-.89l.49-.47a.54.54,0,0,1,.4-.29,3.31,3.31,0,0,1,1.24-.88h0a.49.49,0,0,1,.4-.26l.32-.19a.41.41,0,0,1,.34-.22.07.07,0,0,1,.07,0,1.69,1.69,0,0,1,.86-.49L29,3.41A2.25,2.25,0,0,1,30,2.88a.05.05,0,0,1,.07,0l.19-.11a0,0,0,0,1,.06,0,1.74,1.74,0,0,1,.75-.47c.14-.22.4-.37.43-.67A.47.47,0,0,1,31.43.89Z" fill="red"/></g></g></svg>');
+    content: "";
+    width: 16px;
+    height: 16px;
+    float: left;
+    background-repeat: no-repeat;
+    background-size: 16px 16px;
+    margin-right: 10px;
+    margin-top: 4px;
+  }
 }
