--- a/scss/components/landing-sales/_landing-module-1.scss
+++ b/scss/components/landing-sales/_landing-module-1.scss
@@ -1,8 +1,17 @@
-.warning-top {
+.warning-sign {
   // text-align: center;
   // height: 115px;
   // position: relative;
   text-align: center;
+  position: absolute;
+  left: 50%;
+  bottom: -80%;
+  transform: translateX(-50%);
+}
+
+.warning-top {
+  height: 115px;
+  background: #f1f1f1;
   position: relative;
 }
 
@@ -18,15 +27,16 @@
   background: #fff;
   color: #000;
   text-align: center;
+  padding-top: 122px;
 
-  &::before {
-    content: "";
-    display: block;
-    width: 100%;
-    height: 115px;
-    background: #f1f1f1;
-    z-index: -1;
-  }
+  // &::before {
+  //   content: "";
+  //   display: block;
+  //   width: 100%;
+  //   height: 115px;
+  //   background: #f1f1f1;
+  //   z-index: -1;
+  // }
 }
 
 h1,
@@ -63,6 +73,7 @@ h1 span {
     font-size: 30px;
     font-weight: 600;
     padding: 0.75em;
+    @include montserrat();
   }
 
   font-size: 22px;
