styling top part of landing page

--- a/scss/components/_page-sales.scss
+++ b/scss/components/_page-sales.scss
@@ -4,10 +4,19 @@
   background-size: contain;
   font-family: "Roboto", sans-serif;
 
+  h1 strong {
+    font-weight: 600;
+  }
+
   .header {
     position: absolute;
-    top: 100px;
+    top: 90px;
     left: 0;
+
+    .navbar-brand img {
+      width: 390px;
+      height: auto;
+    }
   }
 
   .content-top {
@@ -32,6 +41,7 @@
     font-size: 22px;
     text-transform: none;
     padding: 1em 2em;
+    margin-top: 1.5em;
   }
 
   ul.checks {
