--- a/scss/components/landing-sales/_landing-module-3.scss
+++ b/scss/components/landing-sales/_landing-module-3.scss
@@ -2,10 +2,39 @@
   background: url("../img/landing-sales/bg-diagonal.jpg") 0 0 no-repeat;
   background-size: cover;
   color: $white;
-  padding: 137px 0;
+  padding: 114px 0;
   font-size: 30px;
   @include montserrat();
   line-height: 1.25;
+  position: relative;
+
+  &::before {
+    content: "";
+    width: 20px;
+    height: 80px;
+    display: block;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 0;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 6.11 83.49"><title>Asset 2</title><g id="a9cce32d-c306-4ad2-9fdd-26002aa01eb2" data-name="Layer 2"><g id="e4b9e29c-8d73-437d-b35b-7955c5ee409c" data-name="Layer 14"><path d="M.27,53.93C0,63.55,0,73.19,0,82.82a.59.59,0,1,0,1.16,0c0-6.87,0-13.74.11-20.62.05,1.29.09,2.56.12,3.83,0,.71,0,1.42,0,2.11a109.47,109.47,0,0,0,.29,13.8c.1.86,1.17.93,1.17,0V80.75c.22.55,1,.4,1.09-.33.66-6.54.18-13.59.94-20.23.16,7.15.08,14.33.09,21.48a.59.59,0,1,0,1.16,0c0-9,.13-18.09-.27-27.08,0-.78-1-1-1.14-.18a41.49,41.49,0,0,0-1.06,6.16c-.05-1.92-.11-3.85-.17-5.76,0-.77-1-1-1.15-.19S2.05,56,2,56.7c-.14-1-.3-2-.53-3C1.24,53,.3,53.16.27,53.93Z" fill="red"/><path d="M1.35,14.9a109.39,109.39,0,0,0,.29,13.79c.1.86,1.17.92,1.17,0V27.5c.22.55,1,.4,1.09-.33.66-6.55.18-13.59.94-20.23.16,7.15.08,14.33.09,21.47a.59.59,0,1,0,1.16,0c0-9,.13-18.08-.27-27.07,0-.79-1-.95-1.14-.19A41.94,41.94,0,0,0,3.62,7.31c-.05-1.92-.11-3.84-.17-5.76,0-.76-1-1-1.15-.18S2.05,2.75,2,3.45c-.14-1-.3-2-.53-2.95C1.24-.27.3-.1.27.68,0,10.3,0,19.94,0,29.56a.59.59,0,1,0,1.16,0c0-6.87,0-13.73.11-20.61" fill="red"/></g></g></svg>');
+  }
+
+  &::after {
+    content: "";
+    width: 42px;
+    height: 117px;
+    display: block;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: -60px;
+    background-position: 0 0;
+    background-repeat: no-repeat;
+    background-image: url("../img/landing-sales/svg-downarrows.png");
+  }
 
   p {
     margin-bottom: 0;
