--- a/scss/components/landing-sales/_landing-module-4.scss
+++ b/scss/components/landing-sales/_landing-module-4.scss
@@ -1,3 +1,21 @@
 .landing-module-4 {
   padding: 2em 0;
+
+  p {
+    font-size: 26px;
+    font-weight: 500;
+    color: #000;
+    margin-bottom: 0;
+    line-height: 1.5;
+
+    strong {
+      color: #FF0000;
+    }
+  }
+
+  padding-top: 5.5em;
+  padding-bottom: 4em;
+
+
+
 }
