--- a/scss/components/landing-sales/_landing-module-9.scss
+++ b/scss/components/landing-sales/_landing-module-9.scss
@@ -1,4 +1,47 @@
 .landing-module-9 {
+  padding: 8em 0 0;
+
+  img {
+    height: 89px;
+    margin-bottom: 2.5em;
+  }
+
+  p {
+    font-size: 33px;
+    font-weight: 500;
+    @include montserrat();
+    margin-bottom: 2.75em;
+  }
+
+  .btn {
+    margin-top: 0;
+  }
+
+  .flush-box {
+    background: $white;
+    color: #000;
+    padding: 5em 0 0;
+
+    .btn {
+      margin-bottom: 3em;
+    }
+
+    h2 {
+      color: #000;
+      text-align: center;
+      font-size: 33px;
+      margin-bottom: 1em;
+    }
+
+    p {
+      font-size: 18px;
+      font-weight: 300;
+    }
+
+    
+    text-align: center;
+  }
+
   background: -moz-linear-gradient(
     0% 50% 0deg,
     rgba(0, 0, 0, 1) 0%,
