--- a/scss/components/_page-sales.scss
+++ b/scss/components/_page-sales.scss
@@ -4,6 +4,10 @@
   background-size: contain;
   font-family: "Roboto", sans-serif;
 
+  p.blurb {
+    @include montserrat();
+  }
+
   h1 strong {
     font-weight: 600;
   }
@@ -61,12 +65,11 @@
         background-position: 0 0;
         width: 33px;
         height: 33px;
-       
       }
     }
 
     li {
-      margin-bottom: .5em;
+      margin-bottom: 0.5em;
       font-size: 21px;
       clear: both;
       font-weight: 300;
@@ -81,6 +84,56 @@
     background: $sherpa-secondary-color;
   }
 
+  .landing-text-box {
+    background: $white;
+    color: #000;
+    padding: 5em 0 0;
+
+    .btn {
+      margin-bottom: 3em;
+    }
+
+    h2 {
+      color: #000;
+      text-align: center;
+      font-size: 33px;
+      margin-bottom: 1em;
+
+      strong {
+        color: $sherpa-secondary-color;
+      }
+    }
+
+    p.blurb {
+      font-weight: 500;
+      font-size: 24px;
+    }
+
+    strong em {
+      color: $sherpa-secondary-color;
+      font-style: normal;
+    }
+
+    p {
+      font-size: 18px;
+      font-weight: 300;
+    }
+
+    text-align: center;
+  }
+
+  .ribbon.ribbon-black {
+    background: #000;
+
+    span {
+      color: #25971b;
+    }
+  }
+
+  .landing-text-box {
+    padding: 5em 0;
+  }
+
   @import "landing-sales/landing-module-1";
   @import "landing-sales/landing-module-2";
   @import "landing-sales/landing-module-3";
@@ -91,5 +144,13 @@
   @import "landing-sales/landing-module-8";
   @import "landing-sales/landing-module-9";
   @import "landing-sales/landing-module-10";
+  @import "landing-sales/landing-module-12";
+  @import "landing-sales/landing-module-13";
+  @import "landing-sales/landing-module-14";
+  @import "landing-sales/landing-module-15";
+  @import "landing-sales/landing-module-16";
+  @import "landing-sales/landing-module-18";
+  @import "landing-sales/landing-module-19";
+  @import "landing-sales/landing-module-20";
   @import "landing-sales/ribbon";
 }
