--- a/scss/components/landing-sales/_landing-module-9.scss
+++ b/scss/components/landing-sales/_landing-module-9.scss
@@ -13,6 +13,12 @@
     margin-bottom: 2.75em;
   }
 
+  .ribbon {
+    color: $white;
+    font-size: 24px;
+    @include montserrat();
+  }
+
   .btn {
     margin-top: 0;
   }
@@ -31,6 +37,10 @@
       text-align: center;
       font-size: 33px;
       margin-bottom: 1em;
+
+      strong {
+        color: $sherpa-secondary-color;
+      }
     }
 
     p {
