--- a/scss/components/_page-sales.scss
+++ b/scss/components/_page-sales.scss
@@ -152,5 +152,8 @@
   @import "landing-sales/landing-module-18";
   @import "landing-sales/landing-module-19";
   @import "landing-sales/landing-module-20";
+  @import "landing-sales/landing-module-21";
+  @import "landing-sales/landing-module-22";
+  @import "landing-sales/landing-module-24";
   @import "landing-sales/ribbon";
 }
