--- a/scss/components/landing-sales/_landing-module-24.scss
+++ b/scss/components/landing-sales/_landing-module-24.scss
@@ -2,7 +2,7 @@
   background: url("../img/landing-sales/bg-social.jpg") 0 0 no-repeat;
   background-size: cover;
   color: $white;
-  padding: 169px 0;
+  padding: 169px 0 0;
 
   &::before {
     content: "";
@@ -73,9 +73,15 @@
 
   .col {
     display: flex;
+     margin-top: 150px;
+
+     &.display-col {
+       margin-top: 0;
+     }
   }
 
   .social-tab {
+
     .icon {
       position: absolute;
       left: 50%;
@@ -84,6 +90,18 @@
       border-radius: 50%;
       width: 127px;
       height: 127px;
+      top: -90px;
+
+      &::before {
+        content: "";
+        display: block;
+        background-position: center center;
+        background-repeat: no-repeat;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        z-index: 9999;
+      }
 
       img {
         position: absolute;
@@ -97,6 +115,38 @@
 
     .icon-phone {
       @include icon-phone();
+      &::before {
+        background-size: 40px;
+        background-repeat: no-repeat;
+        background-position: center center;
+      }
+    }
+
+    .icon-youtube {
+      @include icon-youtube();
+      &::before {
+        background-size: 46px;
+        background-repeat: no-repeat;
+        background-position: center center;
+      }
+    }
+
+    .icon-remarketing {
+      @include icon-remarketing();
+      &::before {
+        background-size: 48px;
+        background-repeat: no-repeat;
+        background-position: center center;
+      }
+    }
+
+    .icon-display {
+      @include icon-display();
+      &::before {
+        background-size: 60px;
+        background-repeat: no-repeat;
+        background-position: center center;
+      }
     }
 
     p.blurb {
@@ -136,6 +186,23 @@
       margin-top: 2em;
       text-align: left;
       margin: 2em auto;
+      position: relative;
+
+      p {
+        margin-bottom: 0;
+      }
+
+      h2 {
+        text-transform: uppercase;
+        margin-bottom: 0;
+        padding-left: 90px;
+      }
+
+      .icon {
+        left: -60px;
+        top: 50%;
+        transform: translateY(-50%);
+      }
     }
   }
 
