--- a/scss/components/landing-sales/_landing-module-13.scss
+++ b/scss/components/landing-sales/_landing-module-13.scss
@@ -1,7 +1,8 @@
 .landing-module-13 {
   h2 {
     font-weight: 500;
-  }
+    margin-bottom: .5em;
+  } 
 
   .bg-1 {
     background: url("../img/landing-sales/need-a-website.jpg") 0 0 no-repeat;
