styling landing page

--- a/scss/components/_page-sales.scss
+++ b/scss/components/_page-sales.scss
@@ -138,6 +138,10 @@
     padding: 5em 0;
   }
 
+  .internal-banner {
+    margin-top: 2em;
+  }
+
   @import "landing-sales/landing-module-1";
   @import "landing-sales/landing-module-2";
   @import "landing-sales/landing-module-3";
@@ -161,5 +165,7 @@
   @import "landing-sales/landing-module-24";
   @import "landing-sales/landing-module-25";
   @import "landing-sales/landing-module-26";
+  @import "landing-sales/landing-module-27";
+  @import "landing-sales/landing-module-28";
   @import "landing-sales/ribbon";
 }
