--- a/scss/components/landing-sales/_landing-module-25.scss
+++ b/scss/components/landing-sales/_landing-module-25.scss
@@ -1,6 +1,34 @@
 .landing-module-25 {
   padding: 4em 0;
 
+  .number1 {
+    &::before {
+      content: "";
+      background: url("../img/landing-sales/number1.svg") 0 0 no-repeat;
+    }
+  }
+
+  .number2 {
+    &::before {
+      content: "";
+      background: url("../img/landing-sales/number2.svg") 0 0 no-repeat;
+    }
+  }
+
+  .number3 {
+    &::before {
+      content: "";
+      background: url("../img/landing-sales/number3.svg") 0 0 no-repeat;
+    }
+  }
+
+  .number4 {
+    &::before {
+      content: "";
+      background: url("../img/landing-sales/number4.svg") 0 0 no-repeat;
+    }
+  }
+
   .list-inline {
     list-style: none;
     display: flex;
@@ -8,8 +36,17 @@
     border-top: 1px solid #cbcbcb;
 
     li {
-      &:first-child::before {
-        display: none;
+      padding-top: 2em;
+      padding-left: 6em;
+      padding-right: 6em;
+
+      &::before {
+        content: "";
+        display: block;
+        background-size: auto 100%;
+        height: 38px;
+        width: 38px;
+        margin: 0 auto 1em;
       }
     }
   }
