--- a/scss/components/landing-sales/_landing-module-26.scss
+++ b/scss/components/landing-sales/_landing-module-26.scss
@@ -8,4 +8,22 @@
   p {
     font-size: 33px;
   }
+
+  .yellow {
+    background: none;
+    color: #eee30c;
+  }
+
+  .gray {
+    color: $black;
+    padding: 3em 0;
+
+    p {
+      line-height: 1.25;
+    }
+  }
+
+  .red {
+    color: red;
+  }
 }
