--- a/scss/components/landing-sales/_landing-module-15.scss
+++ b/scss/components/landing-sales/_landing-module-15.scss
@@ -4,4 +4,12 @@
   img {
     margin-bottom: 2em;
   }
+
+  @include media-breakpoint-down(lg) {  
+    padding: 2em 15px;
+  
+      img {
+        margin-bottom: 0;
+      }
+  }
 }
