--- a/scss/components/landing-sales/_landing-module-19.scss
+++ b/scss/components/landing-sales/_landing-module-19.scss
@@ -3,4 +3,10 @@
     font-size: 33px;
     padding: .5em 0;
   }
+
+  @include media-breakpoint-down(lg) {  
+    .ribbon {
+      font-size: 1em;
+    }
+  }
 }
