--- a/scss/components/landing-sales/_landing-module-7.scss
+++ b/scss/components/landing-sales/_landing-module-7.scss
@@ -57,4 +57,23 @@
       z-index: -1;
     }
   }
+
+  @include media-breakpoint-down(lg) {
+    .content-top {
+      padding-top: 100px;
+    }
+
+    p {
+      @include mobile-type();
+
+    }
+
+    h1 {
+      @include mobile-heading();
+    }
+
+    h2, p.blurb {
+      @include mobile-heading2();
+    }
+  }
 }
