--- a/scss/components/_home-module-6.scss
+++ b/scss/components/_home-module-6.scss
@@ -250,6 +250,10 @@
       color: $white;
     }
 
+    h2 {
+      margin-bottom: 1em;
+    }
+
     input[type="email"], input[type="tel"], input[type="text"], textarea { 
       color: $white;
       border-bottom: 1px solid rgba(255,255,255,0.4);
