--- a/scss/components/landing-sales/_landing-module-20.scss
+++ b/scss/components/landing-sales/_landing-module-20.scss
@@ -16,6 +16,7 @@
     right: 0;
     bottom: 0;
     background: url("../img/landing-sales/bg-ipad.png");
+    background-repeat: no-repeat;
     background-position: 0 0;
     background-size: 100%;
     width: 50vw;
@@ -61,6 +62,47 @@
       position: absolute;
       left: -50vw;
       top: 0;
+    }
+  }
+
+  @include media-breakpoint-down(lg) {
+
+    &::before {
+      display: none;
+    }
+
+    .gray {
+      text-align: center;
+
+      .extra-padding {
+        padding: 2em 15px;
+      }
+    }
+
+    .row .col {
+      .extra-padding {
+        padding: 2em 15px;
+        text-align: center;
+      }
+
+      padding: 0 0;
+    }
+    
+    .content-top {
+      padding-top: 100px;
+    }
+
+    p {
+      @include mobile-type();
+
+    }
+
+    h1 {
+      @include mobile-heading();
+    }
+
+    h2, p.blurb {
+      @include mobile-heading2();
     }
   }
 }
