--- a/scss/components/landing-sales/_landing-module-21.scss
+++ b/scss/components/landing-sales/_landing-module-21.scss
@@ -25,4 +25,26 @@
   .red {
     color: red;
   }
+
+  @include media-breakpoint-down(lg) {
+      
+    padding: 0 0;
+
+    .content-top {
+      padding-top: 100px;
+    }
+
+    p {
+      @include mobile-type();
+
+    }
+
+    h1 {
+      @include mobile-heading();
+    }
+
+    h2, p.blurb {
+      @include mobile-heading2();
+    }
+  }
 }
