--- a/scss/components/landing-sales/_landing-module-25.scss
+++ b/scss/components/landing-sales/_landing-module-25.scss
@@ -50,4 +50,24 @@
       }
     }
   }
+
+  @include media-breakpoint-down(lg) {
+   
+    .content-top {
+      padding-top: 100px;
+    }
+
+    p {
+      @include mobile-type();
+
+    }
+
+    h1 {
+      @include mobile-heading();
+    }
+
+    h2, p.blurb {
+      @include mobile-heading2();
+    }
+  }
 }
