--- a/scss/components/landing-sales/_landing-module-4.scss
+++ b/scss/components/landing-sales/_landing-module-4.scss
@@ -16,6 +16,25 @@
   padding-top: 5.5em;
   padding-bottom: 4em;
 
+@include media-breakpoint-down(lg) {
+    
 
+    .content-top {
+      padding-top: 100px;
+    }
+
+    p {
+      @include mobile-type();
+
+    }
+
+    h1 {
+      @include mobile-heading();
+    }
+
+    h2, p.blurb {
+      @include mobile-heading2();
+    }
+  }
 
 }
