--- a/scss/components/landing-sales/_landing-module-5.scss
+++ b/scss/components/landing-sales/_landing-module-5.scss
@@ -6,7 +6,7 @@
   @include montserrat();
   line-height: 1.25;
   padding: 2em 0 3em;
- 
+
   p {
     font-style: italic;
     font-weight: 300;
@@ -16,5 +16,35 @@
   img {
     margin-top: 25px;
     margin-right: -230px;
+  }
+
+  @include media-breakpoint-down(lg) {
+    background: #000;
+    padding: 1em 0;
+
+    ul.checks {
+      @include mobile-type();
+    }
+
+    .content-top {
+      padding-top: 100px;
+    }
+
+    img {
+      margin: 1em -100px 0 auto;
+    }
+
+    p {
+      @include mobile-type();
+    }
+
+    h1 {
+      @include mobile-heading();
+    }
+
+    h2,
+    p.blurb {
+      @include mobile-heading2();
+    }
   }
 }
