--- a/scss/components/landing-sales/_landing-module-9.scss
+++ b/scss/components/landing-sales/_landing-module-9.scss
@@ -92,4 +92,52 @@
     rgba(0, 0, 0, 1) 100%
   );
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000',endColorstr='#000000' , GradientType=1);
+
+  @include media-breakpoint-down(lg) {
+    padding: 2em 15px 0;
+
+    img {
+      margin-bottom: 0;
+    }
+
+    .content-top {
+      padding-top: 100px;
+    }
+
+    .flush-box {
+      padding: 2em 0 0;
+
+      p {
+      @include mobile-type();
+
+      }
+
+      h1 {
+        @include mobile-heading();
+      }
+
+      h2, p.blurb {
+        @include mobile-heading2();
+      }
+    }
+
+    .ribbon {
+      font-size: 1em;
+    }
+
+    p {
+      @include mobile-type();
+
+      }
+
+      h1 {
+        @include mobile-heading();
+      }
+
+      h2, p.blurb {
+        @include mobile-heading2();
+      }
+
+    
+  }
 }
