--- a/scss/components/landing-sales/_landing-module-25.scss
+++ b/scss/components/landing-sales/_landing-module-25.scss
@@ -52,6 +52,10 @@
   }
 
   @include media-breakpoint-down(lg) {
+
+    .list-inline {
+      flex-direction: column;
+    }
    
     .content-top {
       padding-top: 100px;
