--- a/scss/components/landing-sales/_landing-module-28.scss
+++ b/scss/components/landing-sales/_landing-module-28.scss
@@ -24,10 +24,17 @@
   }
 
   @include media-breakpoint-down(lg) {
-  
 
     .content-top {
       padding-top: 100px;
+    }
+
+    .extra-padding {
+      padding: 2em 15px;
+
+      img {
+        padding: 0 2em;
+      }
     }
 
     p {
