--- a/scss/components/landing-sales/_landing-module-12.scss
+++ b/scss/components/landing-sales/_landing-module-12.scss
@@ -59,6 +59,13 @@
 
   @include media-breakpoint-down(lg) { 
 
+  .col.blue {
+    background: $sherpa-secondary-color url("../img/landing-sales/cutout-guy.png") right 0 no-repeat;
+    min-height: 300px;
+    background-size: cover;
+    
+  }
+
     .yellow .extra-padding {
       padding: 2em 15px;
     }
