--- a/scss/components/landing-sales/_landing-module-13.scss
+++ b/scss/components/landing-sales/_landing-module-13.scss
@@ -56,9 +56,20 @@
       font-size: 18px;
       font-family: "roboto", sans-serif;
     }
+ }
+@include media-breakpoint-down(lg) {  
+
+  .dark-gray .extra-padding, .gray .extra-padding {
+    padding: 0 15px;
   }
 
-   @include media-breakpoint-down(lg) {  
+   .bg-1 {
+     order: -1;
+   }
+
+   .bg-1, .bg-2 {
+     min-height: 300px;
+   }
 
    .ribbon.black {
      padding: 2em 30px;
@@ -66,6 +77,7 @@
        font-size: 1em;
      }
    }
+
 
     p {
       @include mobile-type();
@@ -79,9 +91,7 @@
       @include mobile-heading2();
     }
 
-      p {
-        margin-bottom: 0;
-        @include mobile-type();
-      }
+      
    }
 }
+ 
