--- a/scss/components/landing-sales/_landing-module-16.scss
+++ b/scss/components/landing-sales/_landing-module-16.scss
@@ -6,6 +6,7 @@
     h2 {
       font-size: 33px;
       padding: 0 0;
+      margin-bottom: 0;
     }
   }
 
@@ -44,6 +45,7 @@
     .yellow {
       padding: 0 30px;
     }
+
 
     .map {
        background: url(../img/landing-sales/bg-map.jpg) 0 100% no-repeat;
