--- a/scss/components/landing-sales/_landing-module-5.scss
+++ b/scss/components/landing-sales/_landing-module-5.scss
@@ -1,5 +1,5 @@
 .landing-module-5 {
-  background: url("../img/landing-sales/bg-cellphones.jpg") 0 0 no-repeat;
+  background: url("../img/landing-sales/bg-cellphones.jpg") center 0 no-repeat;
   background-size: cover;
   color: $white;
   font-size: 30px;
