--- a/scss/components/landing-sales/_landing-module-8.scss
+++ b/scss/components/landing-sales/_landing-module-8.scss
@@ -64,7 +64,7 @@
 
   @include media-breakpoint-down(lg) {
     text-align: center;
-    padding: 2em 0;
+    padding: 2em 0 0;
 
     h2 {
       text-align: center;
