--- a/scss/components/_page-sales.scss
+++ b/scss/components/_page-sales.scss
@@ -62,6 +62,7 @@
     text-transform: none;
     padding: 1em 2em;
     margin-top: 1.5em;
+    margin-bottom: 0;
   }
 
   ul.checks {
@@ -105,10 +106,6 @@
     background: $white;
     color: #000;
     padding: 5em 0 0;
-
-    .btn {
-      margin-bottom: 3em;
-    }
 
     h2 {
       color: #000;
@@ -176,6 +173,7 @@
   @import "landing-sales/landing-module-20";
   @import "landing-sales/landing-module-21";
   @import "landing-sales/landing-module-22";
+  @import "landing-sales/landing-module-23";
   @import "landing-sales/landing-module-24";
   @import "landing-sales/landing-module-25";
   @import "landing-sales/landing-module-26";
@@ -183,11 +181,35 @@
   @import "landing-sales/landing-module-28";
   @import "landing-sales/ribbon";
 
-  @include media-breakpoint-down(lg) {
+  @media screen and (max-width: 480px) {
+    .content-top {
+      padding-top: 150px;
+    }
+
+    .warning-sign {
+      top: -100px;
+    }
+  }
+
+  @media screen and (min-width: 481px) and (max-width: 700px) {
+    .content-top {
+      padding-top: 200px;
+    }
+  }
+
+  @media screen and (min-width: 701px) and (max-width: 992px) {
+    .content-top {
+      padding-top: 300px;
+    }
+  }
+
+  @include media-breakpoint-down(sm) {
     background: #000 url("../img/landing-sales/bg-warning-mobile.jpg") 0 0
       no-repeat;
     background-size: contain;
+  }
 
+  @include media-breakpoint-down(lg) {
     .btn {
       white-space: inherit;
     }
@@ -232,12 +254,7 @@
       .col {
         flex: 1;
         padding: 2em 15px;
-        padding-bottom: 0;
       }
-    }
-
-    .content-top {
-      padding-top: 100px;
     }
 
     p {
