--- a/scss/components/landing-sales/_landing-module-13.scss
+++ b/scss/components/landing-sales/_landing-module-13.scss
@@ -1,4 +1,25 @@
 .landing-module-13 {
+
+  .bottom {
+    background: $white;
+    margin-left: -15px;
+    margin-right: -15px;
+    margin-bottom: -15px;
+    padding: 15px;
+    position: relative;
+
+    
+  }
+
+  .img-asap {
+      position: absolute;
+      z-index: 9999;
+      width: 238px;
+      height: 399px;
+      top: -250px;
+      right: 20px;
+    }
+
   h2 {
     font-weight: 500;
     margin-bottom: .5em;
@@ -62,6 +83,16 @@
   .dark-gray .extra-padding, .gray .extra-padding {
     padding: 0 15px;
   }
+
+  .img-asap {
+    position: relative;
+    margin: 0 auto;
+    top: 0;
+    width: auto;
+    height: 100px;
+  }
+
+ 
 
    .bg-1 {
      order: -1;
