--- a/scss/components/landing-sales/_landing-module-24.scss
+++ b/scss/components/landing-sales/_landing-module-24.scss
@@ -7,6 +7,7 @@
   .holder {
     margin: 0 30px;
     position: relative;
+    @include nodropshadow();
 
     &::before {
     content: "";
@@ -88,6 +89,8 @@
   }
 
   .social-tab {
+
+    @include dropshadow();
 
     .icon {
       position: absolute;
@@ -190,7 +193,9 @@
     
   }
 
-  @include media-breakpoint-up(lg) {
+  @media screen and (min-width: 1200px) {
+
+   
 
     .display-col {
        margin-top: 0;
@@ -227,11 +232,16 @@
   }
 
   @include media-breakpoint-down(lg) {
-    
-    padding: 2em 0;
+    background: #000;
+    padding: 0 0;
+
+    img {
+      margin-bottom: 2em;
+    }
 
     .holder {
       margin: 0 0;
+      padding-bottom: 2em;
     }
 
     p.blurb {
@@ -242,6 +252,9 @@
     }
 
     .social-tab {
+
+      flex: 1;
+
       h2 {
         font-size: 2em;
       }
@@ -255,6 +268,7 @@
         width: 90px;
         top: -50px;
       }
+
 
     }
 
