--- a/scss/components/landing-sales/_landing-module-25.scss
+++ b/scss/components/landing-sales/_landing-module-25.scss
@@ -51,6 +51,8 @@
     }
   }
 
+  
+
   @include media-breakpoint-down(lg) {
 
     .list-inline {
@@ -75,3 +77,9 @@
     }
   }
 }
+
+
+.holder {
+    margin: 0 30px;
+    @include dropshadow();
+  }
