--- a/scss/components/landing-sales/_landing-module-9.scss
+++ b/scss/components/landing-sales/_landing-module-9.scss
@@ -96,6 +96,10 @@
   @include media-breakpoint-down(lg) {
     padding: 2em 0 0;
 
+    .row .col {
+      padding: 0 0;
+    }
+
     img {
       margin-bottom: 0;
     }
