--- a/scss/_sherpa-main.scss
+++ b/scss/_sherpa-main.scss
@@ -508,7 +508,7 @@ ul.check-list {
 @include media-breakpoint-down(md) {
   .content {
     text-align: center;
-    padding: 2em 15px;
+    padding: 2em 0;
   }
 }
 
