--- a/scss/components/landing-sales/_landing-module-20.scss
+++ b/scss/components/landing-sales/_landing-module-20.scss
@@ -6,23 +6,25 @@
 
   .dark-gray .extra-padding,
   .gray .extra-padding {
-    padding: 3em 0;
+    padding: 5em 0;
   }
 
-  &::before {
-    content: "";
-    display: block;
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    background: url("../img/landing-sales/bg-ipad.png");
-    background-repeat: no-repeat;
-    background-position: 0 0;
-    background-size: 100%;
-    width: 50vw;
-    height: 100%;
-    z-index: 999;
-  }
+  
+
+//   &::before {
+//     content: "";
+//     display: block;
+//     position: absolute;
+//     right: 0;
+//     bottom: 0;
+//     background: url("../img/landing-sales/bg-ipad.png");
+//     background-repeat: no-repeat;
+//     background-position: 0 0;
+//     background-size: 100%;
+//     width: 50vw;
+//     height: 100%;
+//     z-index: 999;
+//   }
 
   .col.bg-ipad {
     position: relative;
@@ -63,6 +65,40 @@
       left: -50vw;
       top: 0;
     }
+  }
+
+  @include media-breakpoint-up(xl) {
+    .bg-ipad {
+    &::before {
+      content: "";
+      display: block;
+      position: absolute;
+      right: 50px;
+      bottom: 0;
+      background: url("../img/landing-sales/ipad-bg.png");
+      background-repeat: no-repeat;
+      background-position: 0 100%;
+      background-size: 100%;
+      width: 50vw;
+      height: 100%;
+      z-index: 100;
+    } 
+
+    &::after {
+      content: "";
+      display: block;
+      position: absolute;
+      right: -12px;
+      bottom: -100px;
+      background: url("../img/landing-sales/down-arrow.svg");
+      background-repeat: no-repeat;
+      background-position: 0 100%;
+      background-size: 100%;
+      width: 124px;
+      height: 233px;
+      z-index: 999;
+    }
+  }
   }
 
   @include media-breakpoint-down(lg) {
