--- a/scss/components/landing-sales/_landing-module-21.scss
+++ b/scss/components/landing-sales/_landing-module-21.scss
@@ -1,6 +1,6 @@
 .landing-module-21 {
   background: #f1f1f1;
-  padding: 4em 2em;
+  padding: 4em 2em 0;
   position: relative;
 
   .btn {
@@ -22,6 +22,7 @@
     position: relative;
     background: $white;
     overflow: hidden;
+    z-index: 88;
     
     @include dropshadow();
 
@@ -68,9 +69,9 @@
     }
 
     .bg-ppc {
-      background: url('../img/landing-sales/ppc-bg.jpg') center center no-repeat;
+      background: url('../img/landing-sales/ppc-bg.jpg') 0 center no-repeat;
       background-size: cover;
-      min-height: 300px;
+      min-height: 500px;
     }
 
     .landing-text-box {
