--- a/scss/components/landing-sales/_landing-module-6.scss
+++ b/scss/components/landing-sales/_landing-module-6.scss
@@ -34,6 +34,13 @@
     margin-bottom: 2em;
   }
 
+  @media screen and (max-width: 1400px) {
+    .list-inline li {
+          font-size: 1em;
+    }
+  }
+
+
   @include media-breakpoint-down(lg) {
     padding: 2em 15px;
 
